--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Weather Forecast App</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body class="bg-blue-50">
+  <div class="container mx-auto p-4">
+    <h1 class="text-3xl font-bold text-center mb-4 border 2px black  bg-blue-200 rounded shadow-2xl bg-white rounded-lg">Weather Forecast</h1>
+    <div class="flex justify-center">
+      <input type="text" id="city-input" class="border p-2 mr-2 rounded" placeholder="Enter city name">
+      <button id="search-button" class="bg-blue-500 text-white p-2 rounded hover:bg-blue-400">Search</button>
+    </div>
+    <div class="mt-4">
+      <select id="recent-cities-dropdown" class="border p-2 w-full hidden rounded"></select>
+    </div>
+    <div id="error-message" class="mt-4 text-red-500 hidden"></div>
+    <div id="weather-container" class="mt-5 text-center bg-blue-100 rounded shadow-2xl bg-black rounded-lg"></div>
+    <div id="extended-forecast" class="mt-7 grid grid-flow-col grid-rows-2 grid-cols-3 gap-8 "></div>
+  <script src="script.js"></script>
+</body>
+</html>
